--- a/modeling/sections/analysis.tex
+++ b/modeling/sections/analysis.tex
@@ -1,5 +1,5 @@
 \section{Analysis}
-In this section, we solve the mathematical model of the simple gravitational pendulum, \cref{eq:mathmodelsimppend}.
+In this section, we solve \cref{eq:mathmodelsimppend}.
 
 
 \subsection{Non-dimensional analysis}
