--- a/modeling/sections/background.tex
+++ b/modeling/sections/background.tex
@@ -40,11 +40,11 @@ Returning to the physical description, a gravitational pendulum is set into moti
 
 Once motion starts, the system acquires \lingo{kinetic energy}, $\ken$, that is then balanced by \lingo{gravitational potential energy}, $\pen$. This restoring energy causes the system to oscillate about the equilibrium position, swinging back and forth. The time for one complete cycle, a left swing and a right swing, is called the \lingo{pendulum period}, $\oscper$. The interplay between both energies continues indefinitely, unless an external force, such as a \lingo{damping force}, stops the pendulum from moving. Friction at the pivot or fluid drag, provided a partial or total pendulum submersion in a viscous fluid, are examples of damping forces. Finally, buoyancy is another force that comes into play by effectively reducing the bob weight.
 
-A bit of history. Galileo Galilei studied pendulums \ca 1600. He discovered that the pendulum periods are \lingo{isochronos}; \ie, the period is independent of the initial amplitude. Then, by further studies, Christiaan Huygens proposed that the pendulum period depends on the square of its length. More precisely, he found that
+A bit of history. Galileo Galilei studied pendulums \ca 1600. He postulated that they are \lingo{isochronos}; \ie, their period is independent of the initial amplitude. Then, by further studies, Christiaan Huygens proposed that the pendulum period depends on the square of its length. More precisely, he found that
 \begin{equation}\label{eq:huygenslawfortheperiod}
 \oscper = 2\pi\sqrt{\dfrac{\length}{\grav}}\,,
 \end{equation}
-where $\length$ is the rod length and $\grav$ the free fall acceleration. This equation is known as \lingo{Huygens' law for the period}. See, finally, that Huygens' law is consistent with the Galilei's isochronos result.
+where $\length$ is the rod length and $\grav$ the free fall acceleration. This equation is known as \lingo{Huygens' law for the period}. See that Huygens' law is consistent with the Galilei's isochronos result.
 
 
 \subsection{Objective}
