--- a/modeling/sections/formulation.tex
+++ b/modeling/sections/formulation.tex
@@ -1,13 +1,13 @@
 \section{Physical processes}
 There are two main classes of gravitational pendulum motion: \lingo{undamped motion} -- no frictional forces nor drag considered -- and \lingo{damped motion} -- friction and drag acknowledged. In both cases, however, the interplay between the pendulum kinetic energy and gravitational potential need be accounted, since it drives motion.
 
-To begin with, we estimate the period of a simple gravitational pendulum by using educated guessing. This stage will sketch and, hopefully backup, more formal theoretical and mathematical analysis of the system.
+To begin to find the mathematical model, we estimate the period of a simple gravitational pendulum by using educated guessing. This stage will sketch and, hopefully, backup more formal theoretical and mathematical analysis.
 
 Next, to uncover the relationships among the physical quantities that may affect the pendulum motion, we firstly propose formally such quantities, join then them as dimensionless quantities and use finally physical arguments to restrain the physical model. The last step will pave the path to a simple, however accurate, mathematical model.
 
 
 \subsection{Educated guessing}
-Before performing lengthy theoretical calculations, we use simple physical considerations to estimate some pendulum quantities. In concrete, we present an assessment for the the pendulum period by approximating the pendulum tangencial acceleration and the oscillation distance. We apply Newtonian mechanics arguments to the case of a simple gravitational pendulum. 
+Before performing lengthy theoretical calculations, we use simple physical considerations to estimate some pendulum quantities. In concrete, we present an assessment for the pendulum period by approximating its tangencial acceleration and its oscillation distance. We apply Newtonian mechanics arguments to the case of a simple gravitational pendulum. 
 %
 %%% Figures
 % ------------------------------------------------------------- Figure
@@ -20,18 +20,18 @@ Before performing lengthy theoretical calculations, we use simple physical consi
 
 [\Cref{fig:pendulumforces} source: Sanjoy Mahajan, Order of Magnitude Physics A Textbook with Applications to the Retinal Rod and to the Density of Prime Numbers. PhD Thesis. California Institute of Technology Pasadena, California. 1998]
 
-Consider \cref{fig:pendulumforces}. The pendulum bob is object of a force $\sim\mass\grav\sin\vat{\angpos_0}$ that accelerates it at $\lacc\sim\grav\sin\vat{\angpos_0}$. For small $\angpos_0$, then $\lacc\sim\grav\angpos_0$. In time $\oscper$, the bob moves a distance $\lacc\oscper^2\sim\grav\angpos_0\oscper^2$. On the other hand, to complete a cycle, it needs to travel a distance $\lambda\sim\length\angpos_0$, so $\grav\angpos_0\oscper^2 \sim \length\angpos_0$. With that, the estimation of $\oscper$ is
+Consider \cref{fig:pendulumforces}. The pendulum bob is object of a force $\sim\mass\grav\sin\vat{\angpos_0}$ that accelerates it at~\footnote{~The first term of the Taylor series for $\sin\vat{\angpos}$ is $\angpos$, with an error of order $\angpos^3$.} $\lacc\sim\grav\sin\vat{\angpos_0}\sim\grav\angpos_0$. Then, in time $\oscper$, the bob moves a distance $\lacc\oscper^2\sim\grav\angpos_0\oscper^2$. On the other hand, to complete a cycle, the bob needs to travel a distance $\lambda\sim\length\angpos_0$, so $\grav\angpos_0\oscper^2 \sim \length\angpos_0$. Hence, the estimation of $\oscper$ is thus
 \beq
-\oscper\sim\sqrt{\length/\grav}\,.
+\oscper\sim\sqrt{\dfrac{\length}{\grav}}\,,
 \eeq
-This result is consistent with Huygens's law, \cref{eq:huygenslawfortheperiod}, and Galilei's isochronous observation.
+which is consistent with Huygens's law, \cref{eq:huygenslawfortheperiod}, and Galilei's isochronos observation.
 
-Alternatively, as a cross-check calculation, we can estimate a typical bob velocity and with it approximate the period. The maximum potential energy is $\pen\sim\mass\grav\height$, where~\footnote{~The first term of the Taylor series for $\left(1 - \cos\vat{\angpos}\right)$ is $\angpos^2/2$. The incurred error is of order $\angpos^4$.} $\height = \length\left(1 - \cos\vat{\angpos_0}\right)\sim\length\angpos_0^2$. The maximum kinetic energy equals the maximum potential energy, since a simple pendulum is undamped. The maximum velocity can be found by $\mass\lvel^2\sim\mass\grav\length\angpos_0^2$, which yields $\lvel\sim\angpos_0\sqrt{\grav\length}$, an estimate for a typical velocity. The period is finally $\oscper\sim\lambda/\lvel\sim\sqrt{\length/\grav}$, as found using force and acceleration.
+Additionally, to cross-check, we can estimate a typical bob velocity and with it approximate the period. First, the maximum potential energy is $\pen\sim\mass\grav\height$, where~\footnote{~The first term of the Taylor series for $\left(1 - \cos\vat{\angpos}\right)$ is $\angpos^2/2$, with an error of order $\angpos^4$.} $\height = \length\left(1 - \cos\vat{\angpos_0}\right)\sim\length\angpos_0^2$. On the other hand, the maximum kinetic energy is given by $\ken\sim\mass\lvel^2$. Since a simple pendulum is undamped, the maximum kinetic energy equals the maximum potential energy. Hence, the maximum velocity can be found by $\mass\lvel^2\sim\mass\grav\length\angpos_0^2$, which yields $\lvel\sim\angpos_0\sqrt{\grav\length}$. Finally, the period is then $\oscper\sim\lambda/\lvel\sim\sqrt{\length/\grav}$, as estimated using force and acceleration.
 
 
 
 \subsection{Dimensional and order of magnitude analyses}\label{subsec:dimanalysisorderofmag}
-In this section, we show how to use dimensional and order of magnitude analyses to reduce modeling complexity. We do this by considering first damped pendulum motion and then by going gradually to undamped motion by means of physical reasoning.
+In this section, we show how to use dimensional and order of magnitude analyses to reduce model complexity. We do this by considering first damped pendulum motion to then going gradually to undamped motion by reasoning physically.
 
 
 \subsubsection{Dimensional analysis}
@@ -113,64 +113,28 @@ See that $\kdim_1$ contains the quantity being sought, $\angpos$, that $\kdim_2$
             }\,.
 \end{equation}
 
-To reduce the complexity of the mathematical model, restrain the physical model by working on the pendulum, by doing order of magnitude analysis and by making assumptions. Under such hypotheses, we will go from a damped motion case to an undamped motion case.
+To reduce the complexity of the mathematical model, restrain the physical model by working on the pendulum and by making assumptions. Under such hypotheses, we will go from a damped motion case to an undamped motion case.
 
 
-\subsubsection{Order of magnitude analysis}
-First, consider a \lingo{frictionless pivot}. Proper lubrication of the pivot reduces friction. With this, the frictional torque term disappears. To support this assumption, consider that a dry and clean joint of steel pivot and steel rod has a friction coefficient of 0.80, while when lubricated 0.16.
+\subsubsection{Assumptions and their mathematical interpretation}\label{subsec:mathinterpretation}
+First, consider a \lingo{frictionless pivot}. Proper lubrication of the pivot reduces friction. With this, the frictional torque term disappears, $\kdim_4 = \kdim_6 = 0$.
 
-Next, consider a \lingo{massless, inflexible rod}. The rod may be build of a strong material; strong enough to support the bob without elongating. This allows the construction of a very thin rod, with which the ratio of masses vanishes.
+Next, consider a \lingo{massless, inflexible rod}. The rod may be build of a strong material; strong enough to support the bob without elongating. This allows the construction of a very thin rod, with which the ratio of masses vanishes, $\kdim_5 = 0$.
 
-Use now order of magnitude analysis to further restrain the model. Consider a rod length much greater than the bob length. This is possible since we build the pendulum with a very strong rod. Say, for instance, that the bob diameter is $\SI{5}{cm}$ and the rod length $\SI{1}{m}$, then $\diam/\length = 0.05$, which can be neglected.
+Consider a rod length much greater than the bob length. This is possible since we build the pendulum with a very strong rod. Then, the ratio $\diam/length$ can be discarded, $\kdim_7 = 0$.
 
-Consider an non-buoyant fluid by encasing the pendulum and surrounding it by air. The bob density will then be greater than air density. For example, if the system is at $\SI{15}{\celsius}$, at sea level, and the bob made of steel, then 
-\beq
-\dfrac{\dens\txt{air}}{\dens\txt{steel}} = \dfrac{\SI{1.225}{kg/m^3}}{\SI{7750}{kg/m^3}} 
-                                         \sim \num{0.158e-4}\,, 
-\eeq
-which can be ignored.
+Consider an non-buoyant fluid by encasing the pendulum and surrounding it by air. The bob density will then be greater than air density. This implies a non-buoyant fluid. Thus, $\kdim_8 = 0$.
 
-Consider air as an \lingo{inviscid fluid}. An inviscid fluid is a fluid with no viscosity, resulting thus in no drag. To back up this assumption, plug some typical values into $\kdim_9$:
-\beq
-\dfrac{\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}}{\dynvis}
-= \dfrac{1.225\times 0.05\sqrt{1.00\times 9.80665}}{\num{1.983e-5}}
-\sim \num{9672} \,,
-\eeq
-where values in SI units were used. See that inertial forces, $\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}$, are larger than viscous forces, $\dynvis$. Thus, discard viscosity.
+Consider air as an \lingo{inviscid fluid}. An inviscid fluid is a fluid with no viscosity, resulting thus in no drag. Air considered as inviscid, implies no viscosity, thus no drag. Therefore, $\kdim_9 = 0$.
 
-Finally, after having restrained the physical model, we seek for a mathematical function of the form
+Then, after having restrained the physical model, we seek for a mathematical function of the form
 \begin{equation}\label{eq:simplegravpendulumdimanalysis}
 \angpos = \kdimf\vat{
             \angpos_0, 
             t\sqrt{\dfrac{\grav}{\length}}
             }\,.
 \end{equation}
-Neither dimensional analysis nor order of magnitude analysis can help to find the functional form of $\kdimf$. It must be found by a more refined theoretical analysis or by experimentation. Nevertheless, based on sensible assumptions, we have reduced the complex physical model by passing from 13 dimensional quantities to 3 dimensionless quantities. At the end of the day, however, only confrontation with experimental data will support or disprove the reductions we have done.
-
-
-\subsubsection{Further implications}
-Considering an undamped system implies that mechanical energy \emph{must} be conserved, for only kinetic energy turns into gravitational potential energy and \vis. Hence, use Lagrange's and Hamilton's formulations of mechanics, instead of Newton's, to analyze the system.
-
-Incidentally, \cref{eq:simplegravpendulumdimanalysis} may seem, at first sight, a very restricted model. It is, nevertheless, a practical one: a longcase clock pendulum. Such a clock consists of case full of air holding inside a heavy bob hanging by a light and inflexible rod attached to a lubricated pivot.
-
-
-\subsection{Mathematical interpretation}\label{subsec:mathinterpretation}
-For the gravitational pendulum, we begun seeking a mathematical relationship of the form presented in \cref{eq:fullgravpendulummodel}. Then, after sensible physical considerations were made, we ended with a restricted model of the form \cref{eq:simplegravpendulumdimanalysis}. 
-
-The physical assumptions that we made in \cref{eq:fullgravpendulummodel} translate mathematically into
-\begin{itemize}
-%
-\item A frictionless pivot implies no torque. Thus, $\kdim_4 = \kdim_6 = 0$.
-%
-\item A massive bob hanging of a massless and inflexible rod implies that $\kdim_5 = 0$.
-%
-\item A bob diameter much smaller than rod length results in $\kdim_7 = 0$.
-%
-\item A bob made of steel swinging through air, air being less dense than steel, gives a non-buoyant fluid. Thus, $\kdim_8 = 0$.
-%
-\item Air considered as inviscid, implies no viscosity, thus no drag. Therefore, $\kdim_9 = 0$.
-%
-\end{itemize}
+Neither dimensional analysis nor order of magnitude analysis can help to find the functional form of $\kdimf$. It must be found by a more refined analysis or by experimentation. Nevertheless, based on sensible considerations, we have reduced the complex physical model by passing from 13 dimensional quantities to 3 dimensionless quantities. At the end of the day, however, only confrontation with experimental data will support or disprove the reductions we have done.
 
 Finally, for the sake of mathematical purposes, we can combine all the previous assumptions by defining a \lingo{simple gravitational pendulum}:
 \begin{quote}
@@ -178,8 +142,14 @@ a simple gravitational pendulum is a pendulum composed of a massive bob hanging 
 \end{quote}
 
 
+\subsubsection{Notes}
+Considering an undamped system implies that mechanical energy \emph{must} be conserved, for only kinetic energy turns into gravitational potential energy and \vis. Hence, Lagrange's and Hamilton's formulations of mechanics can be used instead of Newton's to analyze the system.
+
+Incidentally, \cref{eq:simplegravpendulumdimanalysis} may seem, at first sight, a very restricted model. It is, nevertheless, a practical one: a longcase clock pendulum. Such a clock consists of case full of air holding inside a heavy bob hanging by a light and inflexible rod attached to a lubricated pivot.
+
+
 \subsection{Mathematical model}\label{subsec:mathmodel}
-In this section, we deduce the equation of motion for a simple gravitational pendulum by means of Lagrange's formulation mechanics by assuming that the pendulum is set into motion by displacing the bob an initial angle $\angpos_0$ with no further forces, $\angvel_0 = 0$.
+In this section, we deduce the equation of motion for a simple gravitational pendulum by means of Lagrange's formulation mechanics to a pendulum that is set into motion by displacing the bob an initial angle $\angpos_0$ with no further forces, $\angvel_0 = 0$.
 
 Consider a simple gravitational pendulum composed of a bob of mass $\mass$ and a rod of length $\length$. Let $\angpos$ be the amplitude of the pendulum for any time $t$, the initial angle be $\angpos_0$, the initial velocity be $\angvel_0 = 0$ and, finally, $\grav$ be the free fall acceleration. Then, find the equation of motion for the pendulum.
 
@@ -206,7 +176,7 @@ Since $\mass\length > 0$, divide the last equation through $\mass\length^2$ to h
 \beq
 \angacc + \dfrac{\grav}{\length}\sin\vat\angpos = 0\,.
 \eeq
-Finally, rewrite the last equation by joining to it the initial conditions
+Finally, rewrite the last equation by joining to it the initial conditions:
 \begin{equation}\label{eq:mathmodelsimppend}
   \begin{dcases}
     %\nxod{2}{\angpos}{t}\vat t + \dfrac{\grav}{\length}\sin\vat{\angpos\vat t} = 0\,,\\
@@ -219,7 +189,3 @@ Finally, rewrite the last equation by joining to it the initial conditions
 \end{equation}
 which yields the equation of motion for a simple gravitational pendulum.
 %\end{solution}
-
-
-\subsection{Assumptions}\label{subsec:assumptions}
-The equation of motion for the pendulum was found using the assumptions made in \cref{subsec:dimanalysisorderofmag} and summarized in \cref{subsec:mathinterpretation}.
