section added: oscillator

--- a/modeling/modeling.tex
+++ b/modeling/modeling.tex
@@ -16,7 +16,8 @@
 \input{./sections/analysis}
 \input{./sections/results}
 
-%\appendix
+\appendix
+\input{./sections/harmonic}
 
 %\bibliographystyle{plainnat}
 %\bibliography{./sections/biblio}
