--- a/modeling/sections/formulation.tex
+++ b/modeling/sections/formulation.tex
@@ -121,11 +121,11 @@ First, consider a \lingo{frictionless pivot}. Proper lubrication of the pivot re
 
 Next, consider a \lingo{massless, inflexible rod}. The rod may be build of a strong material; strong enough to support the bob without elongating. This allows the construction of a very thin rod, with which the ratio of masses vanishes, $\kdim_5 = 0$.
 
-Consider a rod length much greater than the bob length. This is possible since we build the pendulum with a very strong rod. Then, the ratio $\diam/length$ can be discarded, $\kdim_7 = 0$.
+Consider a rod length much greater than the bob length. This is possible since we build the pendulum with a very strong rod. Therefore, the ratio $\diam/\length$ can be discarded, $\kdim_7 = 0$.
 
 Consider an non-buoyant fluid by encasing the pendulum and surrounding it by air. The bob density will then be greater than air density. This implies a non-buoyant fluid. Thus, $\kdim_8 = 0$.
 
-Consider air as an \lingo{inviscid fluid}. An inviscid fluid is a fluid with no viscosity, resulting thus in no drag. Air considered as inviscid, implies no viscosity, thus no drag. Therefore, $\kdim_9 = 0$.
+Consider air as an \lingo{inviscid fluid}. An inviscid fluid is a fluid with no viscosity, resulting thus in no drag. Inviscid air implies no viscosity, thus no drag. Hence, $\kdim_9 = 0$.
 
 Then, after having restrained the physical model, we seek for a mathematical function of the form
 \begin{equation}\label{eq:simplegravpendulumdimanalysis}
