--- a/modeling/sections/results.tex
+++ b/modeling/sections/results.tex
@@ -109,7 +109,7 @@ Again, the diameter of the bob was not reported. But, we can estimate it by cons
       = \sqrt[3]{\dfrac{6\times\num{100.00e-3}}{\pi\times\num{7750}}}
       = \SI{2.2910}{cm}\,.
 \eeq
-With this number, we can calculate the $\diam/length$ ratio for the smaller case of $\length$ analyzed: $\SI{100.00}{cm}$. Then, $\diam/\length = \num{0.02291}$, which can be ignored.
+With this number, we can calculate the $\diam/\length$ ratio for the smaller case of $\length$ analyzed: $\SI{100.00}{cm}$. Then, $\diam/\length = \num{0.02291}$, which can be ignored.
 
 Then, consider the non-buoyant fluid assumption. If the system was at $\SI{15}{\celsius}$, at sea level, then $\dens\txt{air} = \SI{1.225}{kg/m^3}$. Hence, 
 \beq
