--- a/modeling/preambule/rmbdmath.sty
+++ b/modeling/preambule/rmbdmath.sty
@@ -49,6 +49,7 @@
 \newcommand{\ddt}[1]{\ddot{#1}}     % dot dot derivative
 \newcommand{\dx}{\text{d}}          % differential operator
 \newcommand{\Dx}{\Delta}            % difference operator
+\newcommand{\ndx}[1]{\dx^{#1}}      % n-th differential operator
 \newcommand{\iod}[1]{\dx_{#1}}      % indexed ordinary derivative
 \newcommand{\ipd}[1]{\partial_{#1}} % indexed partial derivative
 \newcommand{\igd}[1]{\partial_{#1}} % indexed geometric derivative
