--- a/modeling/sections/analysis.tex
+++ b/modeling/sections/analysis.tex
@@ -2,7 +2,7 @@
 In this section, we solve \cref{eq:mathmodelsimppend}.
 
 
-\subsection{Non-dimensional analysis}
+\subsection{Non-dimensionalization}
 The independent quantity is $t$, the dependent quantity $\angpos$ and the parameters are $\angpos_0$, $\length$ and $\grav$. Since $\angpos$ is already dimensionless, non-dimensionalize $t$ to $\scpq t$ by using $\kdim_3$ as scaling factor:
 \beq
 \scpq t = \kdim_3 
