--- a/modeling/sections/formulation.tex
+++ b/modeling/sections/formulation.tex
@@ -30,8 +30,8 @@ Additionally, to cross-check, we can estimate a typical bob velocity and with it
 
 
 
-\subsection{Dimensional and order of magnitude analyses}\label{subsec:dimanalysisorderofmag}
-In this section, we show how to use dimensional and order of magnitude analyses to reduce model complexity. We do this by considering first damped pendulum motion to then going gradually to undamped motion by reasoning physically.
+\subsection{Dimensional analysis}\label{subsec:dimanalysisorderofmag}
+In this section, we show how to use dimensional analysis to reduce model complexity. We do this by considering first damped pendulum motion to then going gradually to undamped motion by reasoning physically.
 
 
 \subsubsection{Dimensional analysis}
