--- a/modeling/sections/guide.tex
+++ b/modeling/sections/guide.tex
@@ -23,6 +23,8 @@ The \lingo{problem formulation} aims to:
 
 The formulation must be based on sound physical principles, experimental facts or laws expressed in mathematical terms. As a guide, then, define the physical framework (geometry, kinematics, dynamics, thermal transfer and so on), state a dimensional set and then define the physical quantities, constants, parameters, coefficients and provide their dimensions in the chosen set.
 
+Additionally, it is in this stage where all the quantities involved in the problem are clearly and unambiguously defined. Refer to them and also to the considered physical processes by proper names. Use standard names and symbology to the object domain.
+
 A more formal approach is to begin with educated guessing, followed by dimensional analysis, order of magnitude analysis~\footnote{Order of magnitude analysis is preceded by dimensional analysis, since \emph{only} the comparison of \emph{dimensionless} quantities is meaningful!}, analysis of extreme cases, simplifications and ends with a restricted model. The end result may be less accurate to fit experimental data, but less complex and thus more understandable. If fitting is not satisfactory, one can relax simplifications, one at a time, until a desired, or required, agreement is found.
 
 
