--- a/modeling/sections/formulation.tex
+++ b/modeling/sections/formulation.tex
@@ -1,9 +1,9 @@
 \section{Physical processes}
 There are two main classes of gravitational pendulum motion: \lingo{undamped motion} -- no frictional forces nor drag considered -- and \lingo{damped motion} -- friction and drag acknowledged. In both cases, however, the interplay between the pendulum kinetic energy and gravitational potential need be accounted, since it drives motion.
 
-To begin to find the mathematical model, we estimate the period of a simple gravitational pendulum by using educated guessing. This stage will sketch and, hopefully, backup more formal theoretical and mathematical analysis.
+To begin to find the mathematical model, we estimate the period of a simple gravitational pendulum by using educated guessing. This stage will sketch and, hopefully, backup more formal theoretical and mathematical discoveries.
 
-Next, to uncover the relationships among the physical quantities that may affect the pendulum motion, we firstly propose formally such quantities, join then them as dimensionless quantities and use finally physical arguments to restrain the physical model. The last step will pave the path to a simple, however accurate, mathematical model.
+Next, to uncover the relationships among the physical quantities that may affect the pendulum motion, we firstly propose such quantities, then join them as dimensionless quantities and use finally physical arguments to restrain the physical model. The last step will pave the path to a simple, however accurate, mathematical model.
 
 
 \subsection{Educated guessing}
@@ -20,14 +20,18 @@ Before performing lengthy theoretical calculations, we use simple physical consi
 
 [\Cref{fig:pendulumforces} source: Sanjoy Mahajan, Order of Magnitude Physics A Textbook with Applications to the Retinal Rod and to the Density of Prime Numbers. PhD Thesis. California Institute of Technology Pasadena, California. 1998]
 
-Consider \cref{fig:pendulumforces}. The pendulum bob is object of a force $\sim\mass\grav\sin\vat{\angpos_0}$ that accelerates it at~\footnote{~The first term of the Taylor series for $\sin\vat{\angpos}$ is $\angpos$, with an error of order $\angpos^3$.} $\lacc\sim\grav\sin\vat{\angpos_0}\sim\grav\angpos_0$. Then, in time $\oscper$, the bob moves a distance $\lacc\oscper^2\sim\grav\angpos_0\oscper^2$. On the other hand, to complete a cycle, the bob needs to travel a distance $\lambda\sim\length\angpos_0$, so $\grav\angpos_0\oscper^2 \sim \length\angpos_0$. Hence, the estimation of $\oscper$ is thus
+Consider \cref{fig:pendulumforces}. The pendulum bob is object of a force $\force\sim\mass\grav\sin\vat{\angpos_0}$ that accelerates it at~\footnote{~The first term of the Taylor series for $\sin\vat{\angpos}$ is $\angpos$, with an error of order $\angpos^3$.} $\lacc\sim\grav\sin\vat{\angpos_0}\sim\grav\angpos_0$. Then, in time $\oscper$, the bob moves a distance $\lacc\oscper^2\sim\grav\angpos_0\oscper^2$. On the other hand, to complete a cycle, the bob needs to travel a distance $\lambda\sim\length\angpos_0$, so $\grav\angpos_0\oscper^2 \sim \length\angpos_0$. Hence, the estimation of $\oscper$ is thus
+\beq
+\oscper\sim\sqrt{\dfrac{\length}{\grav}}\,.
+\eeq
+
+Additionally, to cross-check, we can estimate a typical bob velocity and with it approximate the period. First, the maximum potential energy is $\pen\sim\mass\grav\height$, where~\footnote{~The first term of the Taylor series for $\left(1 - \cos\vat{\angpos}\right)$ is $\angpos^2/2$, with an error of order $\angpos^4$.} $\height = \length\left(1 - \cos\vat{\angpos_0}\right)\sim\length\angpos_0^2$. On the other hand, the maximum kinetic energy is given by $\ken\sim\mass\lvel^2$. Since a simple pendulum is undamped, the maximum kinetic energy equals the maximum potential energy. Hence, the maximum velocity can be found by $\mass\lvel^2\sim\mass\grav\length\angpos_0^2$, which yields $\lvel\sim\angpos_0\sqrt{\grav\length}$. Finally, the period is then $\oscper\sim\lambda/\lvel$ or
 \beq
 \oscper\sim\sqrt{\dfrac{\length}{\grav}}\,,
-\eeq
-which is consistent with Huygens's law, \cref{eq:huygenslawfortheperiod}, and Galilei's isochronos observation.
+\eeq 
+as estimated using force and acceleration. 
 
-Additionally, to cross-check, we can estimate a typical bob velocity and with it approximate the period. First, the maximum potential energy is $\pen\sim\mass\grav\height$, where~\footnote{~The first term of the Taylor series for $\left(1 - \cos\vat{\angpos}\right)$ is $\angpos^2/2$, with an error of order $\angpos^4$.} $\height = \length\left(1 - \cos\vat{\angpos_0}\right)\sim\length\angpos_0^2$. On the other hand, the maximum kinetic energy is given by $\ken\sim\mass\lvel^2$. Since a simple pendulum is undamped, the maximum kinetic energy equals the maximum potential energy. Hence, the maximum velocity can be found by $\mass\lvel^2\sim\mass\grav\length\angpos_0^2$, which yields $\lvel\sim\angpos_0\sqrt{\grav\length}$. Finally, the period is then $\oscper\sim\lambda/\lvel\sim\sqrt{\length/\grav}$, as estimated using force and acceleration.
-
+Note that the estimated period accords with Huygens's law and Galilei's isochronos observation.
 
 
 \subsection{Dimensional analysis}\label{subsec:dimanalysisorderofmag}
@@ -43,22 +47,22 @@ Since the problem belongs to dynamics, choose the dimensional set $\elset{\phdim
 \toprule
 \multicolumn{1}{c}{Quantity} & Symbol    & Dimension \\
 \midrule
-bob amplitude             & $\angpos$          & $ 1$ \\
-bob initial amplitude     & $\angpos_0$        & $ 1$ \\
-bob mass                  & $\mass\txt{bob}$   & $\phdim M$ \\
-bob density               & $\dens\txt{bob}$   & $\phdim M/\phdim L^3$ \\
-bob diameter              & $\diam\txt{bob}$   & $\phdim L$ \\
+Bob displacement          & $\angpos$          & $ 1$ \\
+Bob amplitude             & $\angpos_0$        & $ 1$ \\
+Bob mass                  & $\mass\txt{bob}$   & $\phdim M$ \\
+Bob density               & $\dens\txt{bob}$   & $\phdim M/\phdim L^3$ \\
+Bob diameter              & $\diam\txt{bob}$   & $\phdim L$ \\
 %
-rod length                & $\length\txt{rod}$ & $\phdim L$ \\
-rod mass                  & $\mass\txt{rod}$   & $\phdim M$ \\
-torque at pivot           & $\torque$          & $\phdim M\phdim L^2/\phdim T$ \\
-pivot friction coefficient & $\fcoeff$         & $ 1$ \\
+Rod length                & $\length\txt{rod}$ & $\phdim L$ \\
+Rod mass                  & $\mass\txt{rod}$   & $\phdim M$ \\
+Torque at pivot           & $\torque$          & $\phdim M\phdim L^2/\phdim T$ \\
+Pivot friction coefficient & $\fcoeff$         & $ 1$ \\
 %
-fluid density             & $\dens\txt{fl}$    & $\phdim M\phdim L^3$ \\
-fluid dynamic viscosity   & $\dynvis$          & $\phdim M/\phdim L\phdim T$ \\
+Fluid density             & $\dens\txt{fl}$    & $\phdim M\phdim L^3$ \\
+Fluid dynamic viscosity   & $\dynvis$          & $\phdim M/\phdim L\phdim T$ \\
 %
-time                      & $t$                & $\phdim T$ \\
-free fall acceleration    & $\grav$            & $\phdim L/\phdim T^2$ \\
+Time                      & $t$                & $\phdim T$ \\
+Free fall acceleration    & $\grav$            & $\phdim L/\phdim T^2$ \\
 \bottomrule
 %
 \end{tabularx}
@@ -67,7 +71,7 @@ free fall acceleration    & $\grav$            & $\phdim L/\phdim T^2$ \\
     {tab:quantitiesgravpendulum}
 % ------------------------------------------------------------- EndTable
 
-A first approach may be to model the pendulum amplitude by a function $f$ of the form
+A first approach may be to model the pendulum displacement by a function $f$ of the form
 \beq
 \angpos = f\vat{
             \angpos_0,
@@ -86,7 +90,7 @@ A first approach may be to model the pendulum amplitude by a function $f$ of the
 \eeq
 This complex relationship can be organized by means of dimensional analysis. 
 
-To begin with, since $\dens\txt{bob}$, $\mass\txt{bob}$ and $\diam\txt{bob}$ are related, discard mass. With this reduction, there are 12 physical quantities and 3 independent dimensions. Thus, according to the Pi-theorem, $12 - 3 = 9$ dimensionless quantities, $\elset{\kdim_i}$, can be formed. Choose these dimensionless quantities as
+Firstly, since $\dens\txt{bob}$, $\mass\txt{bob}$ and $\diam\txt{bob}$ are related, discard mass; wherewith there are 12 physical quantities and 3 independent dimensions. Thus, according to the Pi-theorem, $12 - 3 = 9$ dimensionless quantities, $\elset{\kdim_i}$, can be formed:
 \begin{align*}
 &\kdim_1 = \angpos\,,\,
  \kdim_2 = \angpos_0\,,\,
@@ -98,7 +102,7 @@ To begin with, since $\dens\txt{bob}$, $\mass\txt{bob}$ and $\diam\txt{bob}$ are
  \kdim_8 = \dfrac{\dens\txt{fl}}{\dens\txt{bob}}\,,\,
  \kdim_9 = \dfrac{\dens\txt{fl}\diam\sqrt{\length\grav}}{\dynvis}\,.
 \end{align*}
-See that $\kdim_1$ contains the quantity being sought, $\angpos$, that $\kdim_2$ the quantity that originates motion, $\angpos_0$, and $\kdim_3$ the (independent) quantity against which to confront motion, $t$. Now, again using the Pi-theorem, the desired \emph{dimensionless} function, $\kdimf$, has the \emph{form}:
+See that $\kdim_1$ contains the quantity being sought, $\angpos$, $\kdim_2$ the quantity that originates motion, $\angpos_0$, and $\kdim_3$ the (independent) quantity against which to confront motion, $t$. Now, again using the Pi-theorem, the desired \emph{dimensionless} function, $\kdimf$, has the \emph{form}:
 \begin{equation}\label{eq:fullgravpendulummodel}
 \angpos = \kdimf\vat{
             \angpos,
@@ -113,45 +117,47 @@ See that $\kdim_1$ contains the quantity being sought, $\angpos$, that $\kdim_2$
             }\,.
 \end{equation}
 
-To reduce the complexity of the mathematical model, restrain the physical model by working on the pendulum and by making assumptions. Under such hypotheses, we will go from a damped motion case to an undamped motion case.
+To further reduce the complexity of the mathematical model, restrain the physical model by working on the pendulum and by making assumptions. Under such hypotheses, we will go from a damped motion case to an undamped motion case.
 
 
 \subsubsection{Assumptions and their mathematical interpretation}\label{subsec:mathinterpretation}
-First, consider a \lingo{frictionless pivot}. Proper lubrication of the pivot reduces friction. With this, the frictional torque term disappears, $\kdim_4 = \kdim_6 = 0$.
+First, consider a \lingo{frictionless pivot}. Proper lubrication of the pivot and the rod reduces friction. With this, the frictional torque term disappears, $\kdim_4 = \kdim_6 = 0$.
 
-Next, consider a \lingo{massless, inflexible rod}. The rod may be build of a strong material; strong enough to support the bob without elongating. This allows the construction of a very thin rod, with which the ratio of masses vanishes, $\kdim_5 = 0$.
+Next, consider a \lingo{massless, inflexible rod}. The rod may be built of a strong material; strong enough to support the bob without elongating. This allows the construction of a very thin rod, wherewith the ratio of masses vanishes, $\kdim_5 = 0$.
 
 Consider a rod length much greater than the bob length. This is possible since we build the pendulum with a very strong rod. Therefore, the ratio $\diam/\length$ can be discarded, $\kdim_7 = 0$.
 
 Consider an non-buoyant fluid by encasing the pendulum and surrounding it by air. The bob density will then be greater than air density. This implies a non-buoyant fluid. Thus, $\kdim_8 = 0$.
 
-Consider air as an \lingo{inviscid fluid}. An inviscid fluid is a fluid with no viscosity, resulting thus in no drag. Inviscid air implies no viscosity, thus no drag. Hence, $\kdim_9 = 0$.
+Consider finally air as an \lingo{inviscid fluid}. An inviscid fluid is a fluid with no viscosity, resulting thus in no drag. Hence, $\kdim_9 = 0$.
 
-Then, after having restrained the physical model, we seek for a mathematical function of the form
+Then, after having restrained the physical model, we seek a mathematical function of the form
 \begin{equation}\label{eq:simplegravpendulumdimanalysis}
 \angpos = \kdimf\vat{
             \angpos_0, 
             t\sqrt{\dfrac{\grav}{\length}}
             }\,.
 \end{equation}
-Neither dimensional analysis nor order of magnitude analysis can help to find the functional form of $\kdimf$. It must be found by a more refined analysis or by experimentation. Nevertheless, based on sensible considerations, we have reduced the complex physical model by passing from 13 dimensional quantities to 3 dimensionless quantities. At the end of the day, however, only confrontation with experimental data will support or disprove the reductions we have done.
+Neither dimensional analysis nor order of magnitude analysis can help to find the functional form of $\kdimf$. It must be found by a more refined analysis or by experimentation. Nevertheless, based on sensible considerations, we have reduced the complex physical model by passing from 13 dimensional quantities to 3 dimensionless quantities. In the end, however, only confrontation with experimental data will support or disprove the reductions we have done.
 
-Finally, for the sake of mathematical purposes, we can combine all the previous assumptions by defining a \lingo{simple gravitational pendulum}:
+Finally, for the sake of mathematical purposes, we combine all the previous assumptions by defining a \lingo{simple gravitational pendulum}:
 \begin{quote}
 a simple gravitational pendulum is a pendulum composed of a massive bob hanging by a massless and inflexible rod attached to a frictionless pivot. Under the influence of gravitational interactions, the pendulum swings through an inviscid fluid of negligible density.
 \end{quote}
 
 
 \subsubsection{Notes}
-Considering an undamped system implies that mechanical energy \emph{must} be conserved, for only kinetic energy turns into gravitational potential energy and \vis. Hence, Lagrange's and Hamilton's formulations of mechanics can be used instead of Newton's to analyze the system.
+\Cref{eq:simplegravpendulumdimanalysis} forms the minimum combination of dimensionless quantities, since it involves the dependent quantity, $\angpos$, the independent quantity, $t$, the quantity that originates motion, $\angpos_0$, and the quantity that keeps the motion, $\grav$. As an additional, and welcome, side effect, dimensional analysis tells us that $\angpos$ does not depend on $\grav$ alone, but rather on the quotient $\grav/\length$, which includes the only pendulum property: its length.
 
-Incidentally, \cref{eq:simplegravpendulumdimanalysis} may seem, at first sight, a very restricted model. It is, nevertheless, a practical one: a longcase clock pendulum. Such a clock consists of case full of air holding inside a heavy bob hanging by a light and inflexible rod attached to a lubricated pivot.
+On the other hand, considering an undamped system implies that mechanical energy \emph{must} be conserved, for only kinetic energy turns into gravitational potential energy and \vis. Hence, Lagrange's and Hamilton's formulations of mechanics can be used instead of Newton's to analyze the system.
+
+Finally, \cref{eq:simplegravpendulumdimanalysis} may seem, at first sight, a very restricted model. It is, nevertheless, a practical one: a longcase clock pendulum. Such a clock consists of case full of air holding inside a heavy bob hanging by a light and inflexible rod attached to a lubricated pivot.
 
 
 \subsection{Mathematical model}\label{subsec:mathmodel}
-In this section, we deduce the equation of motion for a simple gravitational pendulum by means of Lagrange's formulation mechanics to a pendulum that is set into motion by displacing the bob an initial angle $\angpos_0$ with no further forces, $\angvel_0 = 0$.
+In this section, we deduce the equation of motion for a simple gravitational pendulum by means of Lagrange's formulation mechanics to a pendulum that is set into motion by displacing the bob an initial angle $\angpos_0$ from rest, $\angvel_0 = 0$.
 
-Consider a simple gravitational pendulum composed of a bob of mass $\mass$ and a rod of length $\length$. Let $\angpos$ be the amplitude of the pendulum for any time $t$, the initial angle be $\angpos_0$, the initial velocity be $\angvel_0 = 0$ and, finally, $\grav$ be the free fall acceleration. Then, find the equation of motion for the pendulum.
+Consider a simple gravitational pendulum composed of a bob of mass $\mass$ and a rod of length $\length$. Let $\angpos$ be the bob displacement for any time $t$, the amplitude be $\angpos_0$, the initial velocity be $\angvel_0 = 0$ and, finally, $\grav$ be the free fall acceleration. Then, find the equation of motion for the pendulum.
 
 %\begin{solution}
 Using $\angpos$ as the generalized position and $\angvel$ as the generalized velocity, write down the Lagrangian, $\lag$, for the system:
