--- a/modeling/sections/results.tex
+++ b/modeling/sections/results.tex
@@ -1,11 +1,11 @@
 \section{Results}
-Although physically and mathematically restrained with respect to the original problem, an undamped pendulum,  \cref{eq:solsimppendsmallangle} does provide a closed form function to predict the amplitude variation of a simple gravitational pendulum with respect to time. 
+Although physically and mathematically restrained with respect to the original problem, an undamped pendulum,  \cref{eq:solsimppendsmallangle} does provide a closed form function to predict the displacement of a simple gravitational pendulum with respect to time. 
 
 Hereafter, we discuss this equation under physical grounds and confront its predictions with experimental data.
 
 
 \subsection{Theoretical discussion}
-In this section, we investigate whether \cref{eq:solsimppendsmallangle} satisfies the principles of momentum and energy conservation.
+In this section, we investigate the physical consequences of \cref{eq:solsimppendsmallangle}.
 
 [consistency on the description of motion: when particle moves to the right, the force points to the left (grav. potential energy restores kinetic energy), and \vis.
 
@@ -27,15 +27,15 @@ The period of the pendulum motion, for the outward and return, is thus
 \begin{equation}\label{eq:simplependulumperiod}
 \oscper = 2\pi\sqrt{\dfrac{\length}{\grav}}\,,
 \end{equation}
-which is Christiaan Huygens's law for the period.
+which is Huygens's law for the period.
 
-Note that only under the small-angle approximation, the period is independent of the amplitude $\angpos_0$; \ie, \lingo{isochronism} -- the property Galileo discovered.
+Note that \emph{only} under the small-angle approximation, the period is independent of the amplitude; \ie, \lingo{isochronism} -- the property Galileo discovered.
 
 
 \subsubsection{Momentum conservation}
-Momentum of a system is conserved if there are no interactions; \ie, $\dx\mom = 0$. Now, since we departed from the hypothesis that gravity acts on the simple gravitational pendulum, \cref{eq:solsimppendsmallangle} should \emph{not} preserve momentum~\footnote{~In the grand scheme of things, momentum \emph{is} conserved, but to see this, we would need to add Earth's momentum as well as the pendulum's.}.
+Momentum of a system is conserved if no forces act on the system, thus $\dt\mom = 0$ holds. Since we departed from the hypothesis that gravity drives the simple gravitational pendulum, \cref{eq:solsimppendsmallangle} should \emph{not} preserve momentum~\footnote{~In the grand scheme of things, momentum \emph{is} conserved, but to see this, we would need to add Earth's momentum to the pendulum's.}.
 
-To begin with, find the pendulum angular velocity by differentiating \cref{eq:dimlesssolsimppendsmallangle}, the dimensionless form of \cref{eq:solsimppendsmallangle}, with respect to $\scpq t$:
+Find the pendulum angular velocity by differentiating \cref{eq:dimlesssolsimppendsmallangle}, the dimensionless form of \cref{eq:solsimppendsmallangle}, with respect to $\scpq t$:
 \begin{equation}\label{eq:angposandangvel}
 \angvel = \iod{\scpq t}\angpos = -\angpos_0\sin\vat{\scpq t}\,.
 \end{equation}
@@ -44,15 +44,19 @@ Next, replace the pendulum angular velocity in \cref{eq:genmomentumanditstempcha
 \igmom\angpos = \mass\length^2\angvel 
               = - \mass\length^2\angpos_0\sin\vat{\scpq t}\,.
 \eeq
-Finally, find the momentum time derivative:
+Finally, calculate the momentum time derivative:
 \beq
 \dtigmom\angpos = - \mass\length^2\angpos_0\cos\vat{\scpq t}\,.
 \eeq
-Since $\dtigmom\angpos$ is \emph{not} zero, momentum is \emph{not} conserved during motion. Thus, \cref{eq:solsimppendsmallangle} accords with physical principles.
+Since $\dtigmom\angpos$ is \emph{not} overall zero, momentum is \emph{not} conserved during motion. Thus, \cref{eq:solsimppendsmallangle} physical considerations regarding momentum.
 
 
 \subsubsection{Energy conservation}
-In Hamilton's formulation of mechanics, the Hamiltonian of a system equals the system total energy. Thus, if the total energy is conserved, then the Hamiltonian time derivative must be null. In the case of the simple pendulum, \cref{eq:solsimppendsmallangle} \emph{should} conserve total energy, since we hypothesized an undamped system.
+In Hamilton's formulation of mechanics, the Hamiltonian of a system equals the system total energy. Thus, if the total energy is conserved, then the Hamiltonian time derivative must be null. Equivalently, it can be proved that~\footnote{~This theorem is useful for it saves computing the time derivative of the Hamiltonian.}
+\begin{quote}
+if the Hamiltonian does not explicitly depend on time, then total energy is conserved. 
+\end{quote}
+Particularly, in the case of the simple pendulum, \cref{eq:solsimppendsmallangle} \emph{should} conserve total energy, because it was deduced by hypothesizing an undamped system.
 
 Firstly, write down the Hamiltonian, $\ham$, of the system:
 \beq
@@ -67,43 +71,25 @@ Plug \cref{eq:dimlesssolsimppendsmallangle} and \cref{eq:angposandangvel} into t
 \beq
 2\ham = \mass\length\angpos_0^2\left(\length\sin^2\vat{\scpq t} + \grav\cos^2\vat{\scpq t}\right)\,.
 \eeq
-Finally, derivate the last equation with respect to $\scpq t$:
-\beq
-\iod{\scpq t}\ham = \mass\length\angpos_0^2
-                     \left( 
-                         \length\sin\vat{\scpq t}\cos\vat{\scpq t} 
-                         - \grav\sin\vat{\scpq t}\cos\vat{\scpq t}
-                     \right)\,.
-\eeq
-Since $\iod{\scpq t}\ham$ does \emph{not} equal zero, \cref{eq:solsimppendsmallangle} does \emph{not} satisfy the energy conservation principle. This discrepancy originates due to the small-angle approximation.
+Since the Hamiltonian $\ham$ \emph{does} depend on time, \cref{eq:solsimppendsmallangle} does \emph{not} satisfy the energy conservation principle. The small-angle approximation originates this discrepancy.
 
 
 \subsection{Experimental data and reference values}
-No experimentation was specifically done for writing the present document. However, some reference values were found in the internet [source!]. 
+No experimentation was specifically made for the writing of the present document. However, some reference values were found in the internet [source!]. 
 
 
 \subsubsection{Experiment}\label{sec:experiment}
-In [source!], the experimental set-up consisted of a pendulum with a spherical, stainless-steel-made bob of mass $\mass\txt{bob} = \SI{100.0}{m}$ hanged of a stainless steel rod whose length was varied during experimentation; however, it was assumed to be inflexible and massless. The rod was connected to a well lubricated pivot. The pendulum was set into motion by displacing the bob an initial angle $\angpos_0 = \ang{10.00}$. Finally, the local free fall acceleration was measured to be $\grav = \SI{10.02}{m/s^2}$ and the pendulum surrounded by air at room temperature.
-
-The gathered experimental together with the model predictions of \cref{eq:solsimppendsmallangle} are presented in \cref{fig:confrontingmodelexpdata}.
-%
-% ------------------------------------------------------------- Figure
-% position: bthH. size:width=0.5\textwidth. file:location+filename
- \docfigure{bt}{width=0.5\textwidth}{./graphs/pendulum-exp-model.pdf}%
-   {Pendulum: experiment \vs model}
-   {Model values for the simple gravitational pendulum and experimental data gathered from a real gravitational pendulum}%
-   {fig:confrontingmodelexpdata}%
-% ------------------------------------------------------------- EndFigure
+In [source!], the experimental set-up consisted of a pendulum with a spherical, stainless-steel-made bob of mass $\mass\txt{bob} = \SI{100.0}{m}$ hanged of a stainless steel rod whose length was varied during experimentation; however, it was assumed to be inflexible and massless. The rod was connected to a well lubricated pivot. The pendulum was set into motion by displacing the bob an amplitude $\angpos_0 = \ang{10.00}$ from rest. Finally, the pendulum was encased and surrounded by air at room temperature.
 
 
 \subsubsection{Verification of assumptions}
-In this installment, with the data presented in \cref{sec:experiment}, we verify the assumptions made in, which led to \cref{eq:solsimppendsmallangle}.
+Before confronting experimental numbers with predictions of \cref{eq:solsimppendsmallangle}, it is necessary to verify that all the assumptions made to deduce \cref{eq:solsimppendsmallangle} are satisfied.
 
-First, consider the \lingo{frictionless pivot} assumption. Proper lubrication of the pivot reduces friction. With this, the frictional torque term disappears. To support this assumption, consider that a dry and clean joint of steel pivot and steel rod has a friction coefficient of 0.80, while when lubricated 0.16. Thus, we can discard friction.
+First, consider the \lingo{frictionless pivot} assumption. The experiment was done by properly lubricating the pivot-rod joint. So the assumption holds. Some useful numbers to back-up this assumption: a dry and clean joint of steel pivot and steel rod has a friction coefficient of 0.80, while when lubricated 0.16.
 
-Next, consider a \lingo{massless, inflexible rod}. The rod may be build of a stainless steel, a very strong material. Although the diameter of the rod was not reported, we can assume that it was strong enough to support the bob without elongating.This implies that the ratio of masses, $\mass\txt{rod}/\mass\txt{bob}$, vanishes.
+Consider the \lingo{massless, inflexible rod} assumption. [source!] does not report numbers to support this assumption. We take it as satisfied.
 
-Again, the diameter of the bob was not reported. But, we can estimate it by considering the stainless steel density equal to $\SI{7750}{kg/m^3}$. Then, since the bob was spherical, the bob diameter would be
+Again, the diameter of the bob was not reported. But, we can estimate it by considering the stainless steel density equal to $\SI{7750}{kg/m^3}$. Then, considering a spherically shaped bob, the diameter would be
 \beq
 \diam = \sqrt[3]{\dfrac{6\mass\txt{bob}}{\pi\dens\txt{bob}}}
       = \sqrt[3]{\dfrac{6\times\num{100.00e-3}}{\pi\times\num{7750}}}
@@ -116,21 +102,34 @@ Then, consider the non-buoyant fluid assumption. If the system was at $\SI{15}{\
 \dfrac{\dens\txt{air}}{\dens\txt{steel}} = \dfrac{\num{1.225}}{\num{7750}} 
                                          = \num{0.158e-4}\,, 
 \eeq
-which can be ignored.
+which can be discarded.
 
-Finally, consider the hypothesis of taken air as an inviscid fluid. Then, plug some typical values into $\kdim_9$:
+Finally, consider if the hypothesis of taken air as an inviscid fluid was satisfied by plugging some typical values into $\kdim_9$:
 \beq
 \dfrac{\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}}{\dynvis}
     = \dfrac{1.225\times\num{2.9011e-2}\sqrt{1.00\times 9.80665}}{\num{1.983e-5}}
     \sim \num{5611} \,,
 \eeq
-See that inertial forces, $\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}$, are larger than viscous forces, $\dynvis$. Thus, discarding viscosity was allowed.
+See that inertial forces, $\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}$, are much larger than viscous forces, $\dynvis$. 
 
-We can conclude the experimental set up was such that satisfied the model assumptions.
+Since the experimental set-up was such that satisfied all the hypotheses leading to \cref{eq:solsimppendsmallangle}, we can, therefore, use this equation to model the simple pendulum in this case.
+
 
 \subsubsection{Analysis of experimental results}
-Using \cref{fig:confrontingmodelexpdata}, one finds that the \lingo{coefficient of determination}, $R^2$, between model figures and experimental data is $\num{0.9876}$, while the relative error $\SI{2.03}{\%}$. Both figures show agreement between model and experiment, thus \cref{eq:solsimppendsmallangle} is taken to correctly represent real pendulums.
+The gathered experimental together with the model predictions of \cref{eq:solsimppendsmallangle} are presented in \cref{fig:confrontingmodelexpdata}.
+%
+% ------------------------------------------------------------- Figure
+% position: bthH. size:width=0.5\textwidth. file:location+filename
+ \docfigure{bt}{width=0.5\textwidth}{./graphs/pendulum-exp-model.pdf}%
+   {Pendulum: experiment \vs model}
+   {Model values for the simple gravitational pendulum and experimental data gathered from a real gravitational pendulum}%
+   {fig:confrontingmodelexpdata}%
+% ------------------------------------------------------------- EndFigure
+
+Using these data, \cref{fig:confrontingmodelexpdata}, one finds that the \lingo{coefficient of determination}, $R^2$, between model and experimental figures is $\num{0.9876}$, while the relative error $\SI{2.03}{\%}$. Both numbers show agreement between model and experiment, thus \cref{eq:solsimppendsmallangle} is taken to correctly represent real pendulums.
 
 
 \subsubsection{Conclusions}
-Nevertheless, if more accuracy is required or less agreement is found when applying \cref{eq:solsimppendsmallangle} to a real pendulum, then the model can be extended by relaxing the assumptions made in \cref{subsec:mathinterpretation}. For instance, if the pendulum swings through a viscous fluid, such as a liquid, then the dimensionless quantities $\kdim_8$ and $\kdim_9$ should be included. Or, if there is little care in lubricating the pivot, then $\kdim_4$, $\kdim_5$ and $\kdim_6$ should be further studied.
+A closed mathematical function between the simple pendulum displacement and time was found, \cref{eq:solsimppendsmallangle}. This model agrees with the momentum conservation but not with energy conservation due to the small-angle approximation. However, when its predictions are confronted with experimental data, the model figures agree with physical reality if the assumptions leading to it are satisfied by experimental set-ups.
+
+Finally, if more accuracy is required or in cases where less agreement is found when applying \cref{eq:solsimppendsmallangle} to a real pendulum, then the model can be extended by relaxing the assumptions made in \cref{subsec:mathinterpretation}. For instance, if the pendulum swings through a viscous fluid, such as a liquid, then the dimensionless quantities $\kdim_8$ and $\kdim_9$ should be included. Or, if there is little care in lubricating the pivot, then $\kdim_4$, $\kdim_5$ and $\kdim_6$ should be further studied.
